--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     </head>
     <body>
         <header>
-            <h1>HELLO - this is our website</h1>
+            <h1>HELLO - this is our website
+                Ines, Reni and Tomas
+            </h1>
         </header>
         <nav>
             <ul>
