--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <h1>HELLO - this is our website
-                Ines, Reni and Tomas
+                Ines, Reni and Tomas hallo hallo
             </h1>
         </header>
         <nav>
